
## [1.8.0] – 2026-01-23
### Added
- Custom-Finding-Dialog für schnelle Eingabe der standardisierten Textstücke inklusive Bestellnummern & Mengen.
- Option, Custom Findings als vorbefüllten Standardfinding-Entwurf direkt im Findings-Editor weiterzubearbeiten.

## [1.7.0] – 2026-01-23
### Added
- Routine-Kontextmenü enthält jetzt ein Einstellfenster für den Non-Routine-Hinweis inklusive `{items}`-Platzhalter und anpassbaren Status-Anzeigen.

### Changed
- Statusdarstellungen im Routine-Hinweis sind jetzt konfigurierbar (z. B. Abnormal wear and tear → AWAT).

## [1.6.4] – 2026-01-23
### Changed
- Routine-Platzhalter `{findings}` blendet bei Mishandling-, Missing-Parts- und Abnormal-Wear-Status (inklusive SRU-Exchange-Varianten) die Findingstexte aus und zeigt stattdessen den Hinweis auf den Non-Routine-Tab.

## [1.6.3] – 2026-01-23
### Changed
- Findings-Auswahlfeld nutzt jetzt etwa 60 % der Gesamtbreite, damit das Status-Dropdown kompakter bleibt.
- Der Nonroutine-Platzhalter übernimmt vorrangig den Text aus `nonRoutineFinding`, sofern vorhanden.

## [1.6.2] – 2026-01-22
### Changed
- Bestelllisten-Labelgruppen erscheinen jetzt in leicht abgedunkelten, abgerundeten Kästen zur besseren optischen Trennung.

## [1.6.1] – 2026-01-22
### Changed
- Bestellliste zeigt nur noch die Überschrift „Bestelliste“ ohne Geräte- oder „Also applies“-Zusatz.
- Statusgruppen in der Bestellliste haben jetzt jeweils eine eigene Kopier-Schaltfläche, und Trennlinien erscheinen nur noch zwischen den Statusabschnitten.
- Partnummern werden pro Finding-Label optisch gruppiert statt mit Trennlinien pro Zeile.

## [1.6.0] – 2026-01-22
### Added
- Status-Dropdown je Finding, damit pro Auswahl ein Status erfasst und gespeichert werden kann.

### Changed
- Bestellliste gruppiert Parts jetzt nach Status und Finding-Label, inklusive Ausgabe im Bestelltext.
- Status- und Label-Überschriften der Bestellliste übernehmen jetzt die gleiche Schriftfarbe wie die Parts.